2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/, panel-plugin/, xfce4-mixer/: Remove XfceMixerCard
	  entirely and use GstMixer directly instead. Add methods 
	  xfce_mixer_init() and xfce_mixer_shutdown() to libxfce4mixer. Only 
	  determine the list of sound cards once inside xfce_mixer_init(). 
	  Move code from xfce-mixer-utilities.{c,h} to libxfce4mixer.{c,h}. 
	  Use a single GstBus for all sound cards. Add new methods 
	  xfce_mixer_bus_connect() and xfce_mixer_bus_disconnect(). Move 
	  methods from XfceMixerCard to libxfce4menu.{c,h} and 
	  xfce-mixer-preferences.{c,h}. Update all the other classes so that
	  they work with the new code.
	* po/xfce4-mixer.pot, po/*.po, po/POTFILES.in: Update POTFILES.in and
	  the po files (no new strings have been added though).

2008-10-05	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Depend on the latest version of xfconf.

2008-10-05	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/xfce-mixer-card.{c,h}: Remove the functions 
	  xfce_mixer_card_connect() and xfce_mixer_card_disconnect(). Add a
	  new "track-changed" signal to XfceMixerCard instead. Make the
	  element and display name members GObject properties. Rename
	  xfce_mixer_card_get_message_owner() to
	  xfce_mixer_card_is_message_owner() and make it static.
	* libxfce4mixer/xfce-mixer-preferences.c: Use xfconf_channel_get()
	  instead of xfconf_channel_new(). Don't unref the channel in the
	  finalize function.
	* panel-plugin/xfce-mixer-plugin.c: Make use of the new 
	  "track-changed" signal of XfceMixerCard. 
	* xfce4-mixer/xfce-mixer.c: Make the card member of XfceMixer a 
	  GObject property. Make use of the new "track-changed" signal of
	  XfceMixerCard. Move code from xfce_mixer_create_contents() into 
	  xfce_mixer_constructed().

2008-09-21	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-plugin-dialog.c: Use multimedia-volume-control
	  icon instead of xfce4-mixer icon.
